// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CreationProgress renders correctly with all selected 1`] = `
<DocumentFragment>
  .cache-uktx6d {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.cache-uktx6d .e13ux8wu4 {
  height: 32px;
  width: 32px;
  font-size: 16px;
  line-height: 1;
  border-width: 3px;
}

.cache-uktx6d .e13ux8wu5 {
  margin: 0 8px;
  width: 32px;
  white-space: nowrap;
}

.cache-uktx6d .e13ux8wu5:first-child {
  margin-left: 0px;
}

.cache-uktx6d .e13ux8wu5:last-child {
  margin-right: 0px;
}

.cache-uktx6d .e13ux8wu1 {
  height: 4px;
  margin-top: 14px;
  margin-bottom: 14px;
}

.cache-uktx6d .e13ux8wu3 {
  margin-top: 16px;
  font-size: 16px;
}

.cache-b8wmnj {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
}

.cache-14fyq18 {
  border-radius: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  background-color: #45d6b5;
}

.cache-1nrpnv9 {
  fill: #fff;
  height: 20px;
  width: 20px;
  min-width: 20px;
  min-height: 20px;
}

.cache-1nrpnv9.cache-1nrpnv9 {
  vertical-align: middle;
}

.cache-1k2d3cm {
  margin-top: 16px;
  font-size: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  text-align: center;
}

.cache-1mkks05 {
  border-radius: 2px;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  border-radius: 2px;
  background-color: #d4dae7;
  position: relative;
}

.cache-1mkks05::after {
  content: '';
  position: absolute;
  left: 0;
  top: 0;
  height: 100%;
  border-radius: 2px;
  background-color: #45d6b5;
  width: 100%;
}

<div
    class="cache-uktx6d e13ux8wu0"
  >
    <div
      class="cache-b8wmnj e13ux8wu5"
    >
      <div
        class="cache-14fyq18 e13ux8wu4"
      >
        <svg
          class="sc-ui-icon etwatq50 cache-1nrpnv9 e7ah3bn0"
          viewBox="0 0 24 24"
        >
          <path
            d="M21,7L9,19L3.5,13.5L4.91,12.09L9,16.17L19.59,5.59L21,7Z"
          />
        </svg>
      </div>
      <div
        class="cache-1k2d3cm e13ux8wu3"
      >
        Step 1
      </div>
    </div>
    <div
      class="cache-1mkks05 e13ux8wu1"
    />
    <div
      class="cache-b8wmnj e13ux8wu5"
    >
      <div
        class="cache-14fyq18 e13ux8wu4"
      >
        <svg
          class="sc-ui-icon etwatq50 cache-1nrpnv9 e7ah3bn0"
          viewBox="0 0 24 24"
        >
          <path
            d="M21,7L9,19L3.5,13.5L4.91,12.09L9,16.17L19.59,5.59L21,7Z"
          />
        </svg>
      </div>
      <div
        class="cache-1k2d3cm e13ux8wu3"
      >
        Step 2
      </div>
    </div>
    <div
      class="cache-1mkks05 e13ux8wu1"
    />
    <div
      class="cache-b8wmnj e13ux8wu5"
    >
      <div
        class="cache-14fyq18 e13ux8wu4"
      >
        <svg
          class="sc-ui-icon etwatq50 cache-1nrpnv9 e7ah3bn0"
          viewBox="0 0 24 24"
        >
          <path
            d="M21,7L9,19L3.5,13.5L4.91,12.09L9,16.17L19.59,5.59L21,7Z"
          />
        </svg>
      </div>
      <div
        class="cache-1k2d3cm e13ux8wu3"
      >
        Step 3
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`CreationProgress renders correctly with default props 1`] = `
<DocumentFragment>
  @keyframes animation-0 {
  from {
    width: 0;
  }

  to {
    width: 100%;
  }
}

.cache-uktx6d {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.cache-uktx6d .e13ux8wu4 {
  height: 32px;
  width: 32px;
  font-size: 16px;
  line-height: 1;
  border-width: 3px;
}

.cache-uktx6d .e13ux8wu5 {
  margin: 0 8px;
  width: 32px;
  white-space: nowrap;
}

.cache-uktx6d .e13ux8wu5:first-child {
  margin-left: 0px;
}

.cache-uktx6d .e13ux8wu5:last-child {
  margin-right: 0px;
}

.cache-uktx6d .e13ux8wu1 {
  height: 4px;
  margin-top: 14px;
  margin-bottom: 14px;
}

.cache-uktx6d .e13ux8wu3 {
  margin-top: 16px;
  font-size: 16px;
}

.cache-b8wmnj {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
}

.cache-14fyq18 {
  border-radius: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  background-color: #45d6b5;
}

.cache-1nrpnv9 {
  fill: #fff;
  height: 20px;
  width: 20px;
  min-width: 20px;
  min-height: 20px;
}

.cache-1nrpnv9.cache-1nrpnv9 {
  vertical-align: middle;
}

.cache-1k2d3cm {
  margin-top: 16px;
  font-size: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  text-align: center;
}

.cache-1hqoliq {
  border-radius: 2px;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  border-radius: 2px;
  background-color: #d4dae7;
  position: relative;
}

.cache-1hqoliq::after {
  content: '';
  position: absolute;
  left: 0;
  top: 0;
  height: 100%;
  border-radius: 2px;
  background-color: #45d6b5;
  -webkit-animation: animation-0 1s linear infinite;
  animation: animation-0 1s linear infinite;
}

.cache-mu9wt2 {
  border-radius: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  background-color: transparent;
  border-style: solid;
  border-color: #d4dae7;
}

.cache-1rcqqpg {
  background-color: #d4dae7;
  height: 7px;
  width: 7px;
  border-radius: 16px;
}

.cache-1xboj6 {
  border-radius: 2px;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  border-radius: 2px;
  background-color: #d4dae7;
  position: relative;
}

.cache-1xboj6::after {
  content: '';
  position: absolute;
  left: 0;
  top: 0;
  height: 100%;
  border-radius: 2px;
  background-color: #45d6b5;
}

<div
    class="cache-uktx6d e13ux8wu0"
  >
    <div
      class="cache-b8wmnj e13ux8wu5"
    >
      <div
        class="cache-14fyq18 e13ux8wu4"
      >
        <svg
          class="sc-ui-icon etwatq50 cache-1nrpnv9 e7ah3bn0"
          viewBox="0 0 24 24"
        >
          <path
            d="M21,7L9,19L3.5,13.5L4.91,12.09L9,16.17L19.59,5.59L21,7Z"
          />
        </svg>
      </div>
      <div
        class="cache-1k2d3cm e13ux8wu3"
      >
        Step 1
      </div>
    </div>
    <div
      class="cache-1hqoliq e13ux8wu1"
    />
    <div
      class="cache-b8wmnj e13ux8wu5"
    >
      <div
        class="cache-mu9wt2 e13ux8wu4"
      >
        <div
          class="cache-1rcqqpg e13ux8wu2"
        />
      </div>
      <div
        class="cache-1k2d3cm e13ux8wu3"
      >
        Step 2
      </div>
    </div>
    <div
      class="cache-1xboj6 e13ux8wu1"
    />
    <div
      class="cache-b8wmnj e13ux8wu5"
    >
      <div
        class="cache-mu9wt2 e13ux8wu4"
      >
        <div
          class="cache-1rcqqpg e13ux8wu2"
        />
      </div>
      <div
        class="cache-1k2d3cm e13ux8wu3"
      >
        Step 3
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`CreationProgress renders correctly with selected prop 1`] = `
<DocumentFragment>
  @keyframes animation-0 {
  from {
    width: 0;
  }

  to {
    width: 100%;
  }
}

.cache-uktx6d {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.cache-uktx6d .e13ux8wu4 {
  height: 32px;
  width: 32px;
  font-size: 16px;
  line-height: 1;
  border-width: 3px;
}

.cache-uktx6d .e13ux8wu5 {
  margin: 0 8px;
  width: 32px;
  white-space: nowrap;
}

.cache-uktx6d .e13ux8wu5:first-child {
  margin-left: 0px;
}

.cache-uktx6d .e13ux8wu5:last-child {
  margin-right: 0px;
}

.cache-uktx6d .e13ux8wu1 {
  height: 4px;
  margin-top: 14px;
  margin-bottom: 14px;
}

.cache-uktx6d .e13ux8wu3 {
  margin-top: 16px;
  font-size: 16px;
}

.cache-b8wmnj {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
}

.cache-14fyq18 {
  border-radius: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  background-color: #45d6b5;
}

.cache-1nrpnv9 {
  fill: #fff;
  height: 20px;
  width: 20px;
  min-width: 20px;
  min-height: 20px;
}

.cache-1nrpnv9.cache-1nrpnv9 {
  vertical-align: middle;
}

.cache-1k2d3cm {
  margin-top: 16px;
  font-size: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  text-align: center;
}

.cache-1mkks05 {
  border-radius: 2px;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  border-radius: 2px;
  background-color: #d4dae7;
  position: relative;
}

.cache-1mkks05::after {
  content: '';
  position: absolute;
  left: 0;
  top: 0;
  height: 100%;
  border-radius: 2px;
  background-color: #45d6b5;
  width: 100%;
}

.cache-1hqoliq {
  border-radius: 2px;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  border-radius: 2px;
  background-color: #d4dae7;
  position: relative;
}

.cache-1hqoliq::after {
  content: '';
  position: absolute;
  left: 0;
  top: 0;
  height: 100%;
  border-radius: 2px;
  background-color: #45d6b5;
  -webkit-animation: animation-0 1s linear infinite;
  animation: animation-0 1s linear infinite;
}

.cache-mu9wt2 {
  border-radius: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  background-color: transparent;
  border-style: solid;
  border-color: #d4dae7;
}

.cache-1rcqqpg {
  background-color: #d4dae7;
  height: 7px;
  width: 7px;
  border-radius: 16px;
}

.cache-1xboj6 {
  border-radius: 2px;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  border-radius: 2px;
  background-color: #d4dae7;
  position: relative;
}

.cache-1xboj6::after {
  content: '';
  position: absolute;
  left: 0;
  top: 0;
  height: 100%;
  border-radius: 2px;
  background-color: #45d6b5;
}

<div
    class="cache-uktx6d e13ux8wu0"
  >
    <div
      class="cache-b8wmnj e13ux8wu5"
    >
      <div
        class="cache-14fyq18 e13ux8wu4"
      >
        <svg
          class="sc-ui-icon etwatq50 cache-1nrpnv9 e7ah3bn0"
          viewBox="0 0 24 24"
        >
          <path
            d="M21,7L9,19L3.5,13.5L4.91,12.09L9,16.17L19.59,5.59L21,7Z"
          />
        </svg>
      </div>
      <div
        class="cache-1k2d3cm e13ux8wu3"
      >
        Step 1
      </div>
    </div>
    <div
      class="cache-1mkks05 e13ux8wu1"
    />
    <div
      class="cache-b8wmnj e13ux8wu5"
    >
      <div
        class="cache-14fyq18 e13ux8wu4"
      >
        <svg
          class="sc-ui-icon etwatq50 cache-1nrpnv9 e7ah3bn0"
          viewBox="0 0 24 24"
        >
          <path
            d="M21,7L9,19L3.5,13.5L4.91,12.09L9,16.17L19.59,5.59L21,7Z"
          />
        </svg>
      </div>
      <div
        class="cache-1k2d3cm e13ux8wu3"
      >
        Step 2
      </div>
    </div>
    <div
      class="cache-1hqoliq e13ux8wu1"
    />
    <div
      class="cache-b8wmnj e13ux8wu5"
    >
      <div
        class="cache-mu9wt2 e13ux8wu4"
      >
        <div
          class="cache-1rcqqpg e13ux8wu2"
        />
      </div>
      <div
        class="cache-1k2d3cm e13ux8wu3"
      >
        Step 3
      </div>
    </div>
    <div
      class="cache-1xboj6 e13ux8wu1"
    />
  </div>
</DocumentFragment>
`;

exports[`CreationProgress renders correctly with steps number 1`] = `
<DocumentFragment>
  @keyframes animation-0 {
  from {
    width: 0;
  }

  to {
    width: 100%;
  }
}

.cache-uktx6d {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.cache-uktx6d .e13ux8wu4 {
  height: 32px;
  width: 32px;
  font-size: 16px;
  line-height: 1;
  border-width: 3px;
}

.cache-uktx6d .e13ux8wu5 {
  margin: 0 8px;
  width: 32px;
  white-space: nowrap;
}

.cache-uktx6d .e13ux8wu5:first-child {
  margin-left: 0px;
}

.cache-uktx6d .e13ux8wu5:last-child {
  margin-right: 0px;
}

.cache-uktx6d .e13ux8wu1 {
  height: 4px;
  margin-top: 14px;
  margin-bottom: 14px;
}

.cache-uktx6d .e13ux8wu3 {
  margin-top: 16px;
  font-size: 16px;
}

.cache-b8wmnj {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
}

.cache-14fyq18 {
  border-radius: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  background-color: #45d6b5;
}

.cache-csw6tr {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #fff;
}

.cache-csw6tr.cache-csw6tr {
  color: #fff;
  font-weight: 500;
}

.cache-1k2d3cm {
  margin-top: 16px;
  font-size: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  text-align: center;
}

.cache-1mkks05 {
  border-radius: 2px;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  border-radius: 2px;
  background-color: #d4dae7;
  position: relative;
}

.cache-1mkks05::after {
  content: '';
  position: absolute;
  left: 0;
  top: 0;
  height: 100%;
  border-radius: 2px;
  background-color: #45d6b5;
  width: 100%;
}

.cache-1hqoliq {
  border-radius: 2px;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  border-radius: 2px;
  background-color: #d4dae7;
  position: relative;
}

.cache-1hqoliq::after {
  content: '';
  position: absolute;
  left: 0;
  top: 0;
  height: 100%;
  border-radius: 2px;
  background-color: #45d6b5;
  -webkit-animation: animation-0 1s linear infinite;
  animation: animation-0 1s linear infinite;
}

.cache-mu9wt2 {
  border-radius: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  background-color: transparent;
  border-style: solid;
  border-color: #d4dae7;
}

.cache-axno7w {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #dce1eb;
}

.cache-axno7w.cache-axno7w {
  color: #dce1eb;
  font-weight: 500;
}

<div
    class="cache-uktx6d e13ux8wu0"
  >
    <div
      class="cache-b8wmnj e13ux8wu5"
    >
      <div
        class="cache-14fyq18 e13ux8wu4"
      >
        <div
          class="e1g1zfwd0 cache-csw6tr e7ah3bn0"
        >
          1
        </div>
      </div>
      <div
        class="cache-1k2d3cm e13ux8wu3"
      >
        Step 1
      </div>
    </div>
    <div
      class="cache-1mkks05 e13ux8wu1"
    />
    <div
      class="cache-b8wmnj e13ux8wu5"
    >
      <div
        class="cache-14fyq18 e13ux8wu4"
      >
        <div
          class="e1g1zfwd0 cache-csw6tr e7ah3bn0"
        >
          2
        </div>
      </div>
      <div
        class="cache-1k2d3cm e13ux8wu3"
      >
        Step 2
      </div>
    </div>
    <div
      class="cache-1hqoliq e13ux8wu1"
    />
    <div
      class="cache-b8wmnj e13ux8wu5"
    >
      <div
        class="cache-mu9wt2 e13ux8wu4"
      >
        <div
          class="e1g1zfwd0 cache-axno7w e7ah3bn0"
        >
          3
        </div>
      </div>
      <div
        class="cache-1k2d3cm e13ux8wu3"
      >
        Step 3
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`CreationProgress renders correctly without animation 1`] = `
<DocumentFragment>
  .cache-uktx6d {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.cache-uktx6d .e13ux8wu4 {
  height: 32px;
  width: 32px;
  font-size: 16px;
  line-height: 1;
  border-width: 3px;
}

.cache-uktx6d .e13ux8wu5 {
  margin: 0 8px;
  width: 32px;
  white-space: nowrap;
}

.cache-uktx6d .e13ux8wu5:first-child {
  margin-left: 0px;
}

.cache-uktx6d .e13ux8wu5:last-child {
  margin-right: 0px;
}

.cache-uktx6d .e13ux8wu1 {
  height: 4px;
  margin-top: 14px;
  margin-bottom: 14px;
}

.cache-uktx6d .e13ux8wu3 {
  margin-top: 16px;
  font-size: 16px;
}

.cache-b8wmnj {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
}

.cache-14fyq18 {
  border-radius: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  background-color: #45d6b5;
}

.cache-1nrpnv9 {
  fill: #fff;
  height: 20px;
  width: 20px;
  min-width: 20px;
  min-height: 20px;
}

.cache-1nrpnv9.cache-1nrpnv9 {
  vertical-align: middle;
}

.cache-1k2d3cm {
  margin-top: 16px;
  font-size: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  text-align: center;
}

.cache-1mkks05 {
  border-radius: 2px;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  border-radius: 2px;
  background-color: #d4dae7;
  position: relative;
}

.cache-1mkks05::after {
  content: '';
  position: absolute;
  left: 0;
  top: 0;
  height: 100%;
  border-radius: 2px;
  background-color: #45d6b5;
  width: 100%;
}

.cache-1xboj6 {
  border-radius: 2px;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  border-radius: 2px;
  background-color: #d4dae7;
  position: relative;
}

.cache-1xboj6::after {
  content: '';
  position: absolute;
  left: 0;
  top: 0;
  height: 100%;
  border-radius: 2px;
  background-color: #45d6b5;
}

.cache-mu9wt2 {
  border-radius: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  background-color: transparent;
  border-style: solid;
  border-color: #d4dae7;
}

.cache-1rcqqpg {
  background-color: #d4dae7;
  height: 7px;
  width: 7px;
  border-radius: 16px;
}

<div
    class="cache-uktx6d e13ux8wu0"
  >
    <div
      class="cache-b8wmnj e13ux8wu5"
    >
      <div
        class="cache-14fyq18 e13ux8wu4"
      >
        <svg
          class="sc-ui-icon etwatq50 cache-1nrpnv9 e7ah3bn0"
          viewBox="0 0 24 24"
        >
          <path
            d="M21,7L9,19L3.5,13.5L4.91,12.09L9,16.17L19.59,5.59L21,7Z"
          />
        </svg>
      </div>
      <div
        class="cache-1k2d3cm e13ux8wu3"
      >
        Step 1
      </div>
    </div>
    <div
      class="cache-1mkks05 e13ux8wu1"
    />
    <div
      class="cache-b8wmnj e13ux8wu5"
    >
      <div
        class="cache-14fyq18 e13ux8wu4"
      >
        <svg
          class="sc-ui-icon etwatq50 cache-1nrpnv9 e7ah3bn0"
          viewBox="0 0 24 24"
        >
          <path
            d="M21,7L9,19L3.5,13.5L4.91,12.09L9,16.17L19.59,5.59L21,7Z"
          />
        </svg>
      </div>
      <div
        class="cache-1k2d3cm e13ux8wu3"
      >
        Step 2
      </div>
    </div>
    <div
      class="cache-1xboj6 e13ux8wu1"
    />
    <div
      class="cache-b8wmnj e13ux8wu5"
    >
      <div
        class="cache-mu9wt2 e13ux8wu4"
      >
        <div
          class="cache-1rcqqpg e13ux8wu2"
        />
      </div>
      <div
        class="cache-1k2d3cm e13ux8wu3"
      >
        Step 3
      </div>
    </div>
  </div>
</DocumentFragment>
`;
